# meta-hacka-naya

./: .dockerignore  .env.example  .gitignore  CHANGES.md  Dockerfile  README.md  __init__.py  ablation.py  client.py  debug_err.txt  debug_gnn.py  debug_gnn2.py  debug_output.txt  debug_output_tables.txt  evaluate.py  fix_bounds.py  gym_wrapper.py  hrl_train.py  inference.py  models.py  netlify.toml  openenv.yaml  push_error.txt  push_error_fixed.txt  push_hf.py  push_result.txt  pyproject.toml  report.txt  reqs_loose.in  test_api.js  test_db.py  test_full.js  test_local.js  train.py  uv_error.txt
backend/: .env  main.py  requirements.txt
backend/ai/: __init__.py  llm_client.py  project_evaluator.py  quiz_generator.py  reflexion_agent.py  resource_fetcher.py  resume_parser.py  roadmap_generator.py
backend/api/: __init__.py  badges.py  career.py  onboarding.py  profile.py  projects.py  quiz.py  (+2 more)
dashboard/: index.html  server.py
frontend/: package-lock.json  package.json
results/: _check.txt  ablation_results.json  ablation_table.md  episode_rewards.csv  evaluation_results.json  hrl_results_task1_easy.json  hrl_results_task2_medium.json  learning_curve.json  learning_curve_task1_easy.json  learning_curve_task1_easy_gnn.json  learning_curve_task2_medium.json  learning_curve_task2_medium_gnn.json  learning_curve_task3_hard.json  learning_curve_task3_hard_gnn.json  learning_curve_task4_team.json  learning_curve_task5_deadline.json
server/: __init__.py  app.py
tasks/: task1_easy.yaml  task2_medium.yaml  task3_hard.yaml  task4_team.yaml  task5_deadline.yaml
(+27 files in other folders)
