[project]
name = "edupath-ai"
version = "1.0.0"
description = "Personalized AI tutor RL environment — OpenEnv compliant"
requires-python = ">=3.11"
dependencies = [
    "openenv-core>=0.2.3",
    "fastapi>=0.115.0",
    "uvicorn>=0.30.0",
    "pydantic>=2.9.0",
    "python-multipart>=0.0.9",
    "openai>=2.7.2",
    "pyyaml>=6.0.2",
    "aiofiles>=24.1.0",
    "requests>=2.31.0",
    "numpy>=1.26.4",
]

[project.scripts]
server = "server.app:main"

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"
